--- a/styles/styles.css
+++ b/styles/styles.css
@@ -336,6 +336,9 @@ section {
 .about-stats .progress-bars .progress-bar .progress-con .progress .boostrap {
   width: 70%;
 }
+.about-stats .progress-bars .progress-bar .progress-con .progress .wp {
+  width: 85%;
+}
 
 .stat-title {
   text-transform: uppercase;
